Avoid enabling kcrash if it's only included via a plugin

Summary:
If a Qt app happens to load our plasma-integration plugin it shouldn't
change how bug reporting works.

There's no point showing drkonqi if there's not an
appropriate KDE product.

Worse, our crash handling can interfere with that processes own signal
handling.

This patch is effectively a copy of
02b523bad09aab062355e46771889b0f3709692f in kxmlgui for enabling auto-
accelerators only if the lib is linked directly.

BUG: 401637

Test Plan:
Changed the crashtest app in drkonqi to not directly link - didn't get drkonqi
Re-enabled linking. Got drkonqi

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D23171